--- a/angular2-starter-master/src/app/computer-details/computer-details.component.html
+++ b/angular2-starter-master/src/app/computer-details/computer-details.component.html
@@ -7,6 +7,14 @@
   <br/>
 
   Computer IP address: {{computer.ipAddress}}
+  <br/>
+
+  User name: {{computer.user}}
+  <br/>
+
+  Memory: {{computer.memory}}
+  <br/>
+
 </div>
 
 <hr/>
@@ -16,4 +24,11 @@
   <br/>
 
   Computer IP address: {{computer.ipAddress}}
+  <br/>
+
+  User name: {{computer.user}}
+  <br/>
+
+  Memory: {{computer.memory}}
+  <br/>
 </div>
