--- a/angular2-starter-master/src/app/computer-details/computer-details.component.html
+++ b/angular2-starter-master/src/app/computer-details/computer-details.component.html
@@ -1,34 +1,23 @@
-<p>
-  computers:
-</p>
+<div>
+  Computer ID: {{computerId}}
+</div>
 
-<div *ngFor="let computer of computers">
+<br/>
+<br/>
+
+<div *ngIf="computer">
+  <div>
   Computer name: {{computer.name}}
   <br/>
 
   Computer IP address: {{computer.ipAddress}}
   <br/>
-
   User name: {{computer.user}}
   <br/>
 
   Memory: {{computer.memory}}
   <br/>
-
+  <br/>
+  <button (click)="onNavigate(computer)">Navigate to usage data</button>
 </div>
 
-<hr/>
-
-<div *ngFor="let computer of computers$ | async">
-  Computer name: {{computer.name}}
-  <br/>
-
-  Computer IP address: {{computer.ipAddress}}
-  <br/>
-
-  User name: {{computer.user}}
-  <br/>
-
-  Memory: {{computer.memory}}
-  <br/>
-</div>
